@@ -6,6 +6,7 @@
 - Changed meta file serialization format to json
 - Performance improvements
 - Implemented a async project exporter
+- Improved terrain brush rendering
 
 [0.0.9] ~ 18/10/2016
 - Updated libGDX to 1.9.4
